<resources>
    <string name="app_name">Term Organizer</string>
    <string name="Title">Term Organizer</string>
    <string name="enter">Enter</string>
    <string name="textview">TextView</string>
    <string name="Name">Name</string>
    <string name="term_name">termName</string>
    <string name="terms_title">LIST OF CURRENT TERMS</string>
    <string name="delete">Delete</string>
    <string name="course_title">Enter Course Name</string>
    <string name="courses">Courses</string>
    <string name="start_date">Tap to select start date</string>
    <string name="end_date">Tap to select end date</string>
    <string name="save">Save</string>
    <string name="edit_course_title">Course Title:</string>
    <string name="courseTerm">courseTerm</string>
    <string name="termname">termName</string>
    <string name="courseItemView">No product name</string>
    <string name="add_course">Add Course</string>
    <string name="TermEnd">End Date</string>
    <string name="TermTitle">Term Goes Here</string>
    <string name="instructors_name">Instructors Name:</string>
    <string name="instructors_phone">Instructors Phone:</string>
    <string name="instructors_email">Instructors Email:</string>
    <string name="enter_instructors_email_here">Enter instructors email here</string>
    <string name="enter_instructors_phone_number_here">Enter instructors phone number here</string>
    <string name="enter_instructors_name_here">Enter instructors name here</string>
    <string name="add_new_term">Add New Term</string>
    <string name="view_course_list">View Course List</string>
    <string name="view_assessment_list">View Assessment List</string>
    <string name="return_to_terms">Return to Terms</string>
    <string name="list_of_assessments">List of Assessments</string>
    <string name="Assessment_date">Tap to select Assessment Start</string>
    <string name="save_assessment">Save Assessment</string>
    <string name="delete_assessment">Delete Assessment</string>
    <string name="add_assessment">Add Assessment</string>
    <string name="assigned_term">Assigned Term:</string>
    <string name="channel_name">myChannelName</string>
    <string name="channel_description">myChannelDescription</string>
    <string name="tap_to_select_assessment_end">Tap to Select Assessment End</string>
    <string name="notify_assessment_start">Notify Assessment Start</string>
    <string name="notify_assessment_end">Notify Assessment End</string>
    <string name="list_of_courses">List of Courses:</string>
</resources>